# shebanq-mcp

./: .dockerignore  .gitignore  .zenodo.json  ATTRIBUTION.md  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  render.yaml
.github/workflows/: benchmark.yml  docker-smoke.yml  draft-paper.yml  emdros-tests.yml  publish-image.yml
demo/: about.html  index.html  showcase.json  template.html
docs/specs/: 2026-06-08-demo-showcase-design.md  2026-06-08-shebanq-mcp-server-design.md  2026-06-09-mcp-deploy-design.md  2026-06-10-live-web-demo-design.md  2026-06-10-verse-references-design.md
scripts/: build_demo.py  build_features.py  dump_schema.py  eval_translator.py  extract_showcase.py  make_og_image.py  probe_morphology.py  run_constructs.py  smoke_mcp.py  spike_emdros.py
src/shebanq_mcp/: __init__.py  assumptions.py  convert.py  feature_reference.py  features.json  formatter.py  guard.py  mql_primer.md  mql_to_tf.py  runner.py  server.py  tf_primer.md  tf_runner.py  tf_to_mql.py  tf_translate.py  tf_validator.py  web.py  (+2 more)
tests/: conftest.py  guard_targets.py  test_assumptions.py  test_build_demo.py  test_convert.py  test_eval_translator.py  test_feature_reference.py  test_featured_searches.py  test_formatter.py  test_guard.py  test_mql_fixtures.py  test_mql_to_tf.py  test_runner.py  test_server.py  test_server_transport.py  test_tf_equivalence.py  test_tf_row_equivalence.py  test_tf_runner.py  test_tf_server.py  test_tf_to_mql.py  test_tf_translate.py  test_tf_validator.py  test_translate.py  test_validator.py  test_web.py
(+9 files in other folders)
