[project]
name = "shebanq-mcp"
version = "0.1.0"
description = "MCP server for querying the BHSA Hebrew Bible via Emdros/MQL"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.2",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
shebanq-mcp = "shebanq_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shebanq_mcp = ["features.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["emdros: requires a built BHSA Emdros database"]
